--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Lethal Company</title>
 </head>
 <body>
         
-    <!--div class="fotouvod">
-        <img src="assets/content/LethalCompany.jpg" alt="LethalCompany">
-    </-div-->
-
-    <div class="TitleLC">
+    <div class="fotouvod">
         <h1>Lethal Company</h1>
     </div>
 
