--- a/index.html
+++ b/index.html
@@ -3,13 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body>
+<body class="mainBody">
         
     <div class="fotouvod">
+
         <h1>Lethal Company</h1>
+
+        <div class="selection">
+
+            <div class="selectionItem">
+                <a href="#">
+                    <h2>Hra</h2>
+                </a>
+            </div>
+
+            <div class="selectionItem">
+                <a href="#">
+                    <h2>Vývoj</h2>
+                </a>
+            </div>
+
+            <div class="selectionItem">
+                <a href="#">
+                    <h2>Vývojář</h2>
+                </a>
+            </div>
+
+            <div class="selectionItem">
+                <a href="#">
+                    <h2>Historie</h2>
+                </a>
+            </div>
+
+        </div>
+
     </div>
 
 </body>
