Update style.css and index.html
- Changed justify-content property in .selection class from space-evenly to space-between
- Added width property of 90vw to .selection class
- Changed border property in .selectionItem class from "8px white" to "8px solid white"
- Added new CSS class .flex with properties display: flex, flex-direction: column, justify-content: space-between, height: 95dvh, and align-items: center

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Lethal Company</title>
 </head>
 <body class="fotouvod">
-        
-<!-- Nadpis -->
+    <div class="flex">
+        <!-- Nadpis -->
         <h1>Lethal Company</h1>
 
-<!-- Výběr -->
+        <!-- Výběr -->
         <div class="selection">
-
-
             <a href="#">
                 <div class="selectionItem">
                     <h2>Hra</h2>
@@ -40,8 +38,7 @@
                     <h2>Historie</h2>
                 </div>
             </a>
-
         </div>
-
+    </div>
 </body>
 </html>
