--- a/index.html
+++ b/index.html
@@ -7,38 +7,37 @@
     <title>Lethal Company</title>
 </head>
 <body class="fotouvod">
+
     <div class="flex">
-        <!-- Nadpis -->
+<!-- Nadpis -->
         <h1>Lethal Company</h1>
 
-        <!-- Výběr -->
+<!-- Výběr -->
         <div class="selection">
+
             <a href="#">
-                <div class="selectionItem">
+                <div class="selectionItem Hra">
                     <h2>Hra</h2>
                 </div>
             </a>
 
             
             <a href="#">
-                <div class="selectionItem">
+                <div class="selectionItem Vyvoj">
                     <h2>Vývoj</h2>
                 </div>
             </a>
 
             
             <a href="#">
-                <div class="selectionItem">
+                <div class="selectionItem Vyvojar">
                     <h2>Vývojář</h2>
                 </div>
             </a>
 
-            <a href="#">
-                <div class="selectionItem">
-                    <h2>Historie</h2>
-                </div>
-            </a>
         </div>
+
     </div>
+
 </body>
 </html>
