--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <!-- Výběr -->
         <div class="selection">
 
-            <a href="#">
+            <a href="hra.html">
                 <div class="selectionItem Hra">
                     <h2>Hra</h2>
                 </div>
             </a>
 
             
-            <a href="#">
+            <a href="vyvoj.html">
                 <div class="selectionItem Vyvoj">
                     <h2>Vývoj</h2>
                 </div>
             </a>
 
             
-            <a href="#">
+            <a href="vyvojar.html">
                 <div class="selectionItem Vyvojar">
                     <h2>Vývojář</h2>
                 </div>
