--- a/hra.html
+++ b/hra.html
@@ -3,22 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body>
-    <nav>
-        <ul class="nav">
-                <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
-            <div class="navitems">
-                <li class="item"><a href="#">a</a></li>
-                <li class="item"><a href="#">b</a></li>
-                <li class="item"><a href="#">c</a></li>
-            </div>
-        </ul>
-    </nav>
+<body class="stranka">
+
+        <nav aria-label="primary menu">
+            <ul class="nav">
+                    <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
+                <div class="navitems">
+                    <li class="item here"><a href="hra.html"><i class="ph-bold ph-game-controller"></i> Hra</a></li>
+                    <li class="item"><a href="vyvoj.html"><i class="ph-bold ph-hammer"></i> Vývoj</a></li>
+                    <li class="item"><a href="vyvojar.html"><i class="ph-bold ph-dog"></i> Vývojář</a></li>
+                    <li class="item"><a href="index.html"><i class="ph-bold ph-house"></i> Domů</a></li>
+                </div>
+            </ul>
+        </nav>
+
+<!-- Container -->
+    <div class="Terminal">
+
+        <h1>ABCDEFGHIJKLMNOPQRSTUVWXYZ</h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis sint temporibus aperiam soluta non nisi, voluptas, doloribus rerum dolorem ipsa voluptatibus hic dolor quidem est earum reiciendis, accusamus deleniti atque!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto dolore ducimus pariatur maxime soluta doloremque placeat alias, at quam unde cum quis accusamus aspernatur omnis voluptas autem doloribus, officia asperiores.</p>
+    </div>
 
 
-    <div style="height: 2000px;"></div>
+        <div style="height: 2000px;"></div>
+
+
+
 </body>
 </html>
