--- a/vyvoj.html
+++ b/vyvoj.html
@@ -3,20 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body>
+<body class="stranka">
+
+<!-- Navigace -->
     <nav>
         <ul class="nav">
                 <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
             <div class="navitems">
-                <li class="item"><a href="#">a</a></li>
-                <li class="item"><a href="#">b</a></li>
-                <li class="item"><a href="#">c</a></li>
+                <li class="item"><a href="hra.html"><i class="ph-bold ph-game-controller"></i> Hra</a></li>
+                <li class="item here"><a href="vyvoj.html"><i class="ph-bold ph-hammer"></i> Vývoj</a></li>
+                <li class="item"><a href="vyvojar.html"><i class="ph-bold ph-dog"></i> Vývojář</a></li>
+                <li class="item"><a href="index.html"><i class="ph-bold ph-house"></i> Domů</a></li>
             </div>
         </ul>
     </nav>
+
+<!-- Container -->
+    <div class="container">
+
+        <h1>A</h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
+
+    </div>
 
 
     <div style="height: 2000px;"></div>
