--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </div>
             </a>
 
+            <!-- Klema neni femboy :3 -->
             
             <a href="vyvojar.html">
                 <div class="selectionItem Vyvojar">
