--- a/hra.html
+++ b/hra.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body class="stranka">
+<body class="Hra">
 
         <nav aria-label="primary menu">
             <ul class="nav">
@@ -21,7 +21,7 @@
             </ul>
         </nav>
 
-<!-- Container -->
+<!-- Terminal -->
     <div class="Terminal">
 
         <h1>ABCDEFGHIJKLMNOPQRSTUVWXYZ</h1>
@@ -31,6 +31,22 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto dolore ducimus pariatur maxime soluta doloremque placeat alias, at quam unde cum quis accusamus aspernatur omnis voluptas autem doloribus, officia asperiores.</p>
     </div>
 
+    <div class="aaaa">
+        <h2>SIGURD</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam provident eaque quae sint vitae sunt voluptatum, repudiandae aliquam corporis velit unde quia inventore nisi laudantium qui optio suscipit, deserunt explicabo.</p>
+    </div>
+    <style>
+        .aaaa{
+            width: 1500px;
+            height: 600px;
+            background-color: gray;
+            opacity: .7;
+            margin: 32px;
+            padding: 16px;
+            font-size: 32px;
+            border-radius: 48px;
+        }
+    </style>
 
         <div style="height: 2000px;"></div>
 
