--- a/vyvoj.html
+++ b/vyvoj.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body class="stranka">
+<body class="Vyvoj">
 
 <!-- Navigace -->
     <nav>
@@ -22,8 +22,8 @@
         </ul>
     </nav>
 
-<!-- Container -->
-    <div class="container">
+<!-- Terminal -->
+    <div class="Terminal">
 
         <h1>A</h1>
 
