--- a/vyvojar.html
+++ b/vyvojar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Lethal Company</title>
 </head>
-<body class="stranka">
+<body class="Vyvojar">
     
     <nav>
         <ul class="nav">
@@ -21,13 +21,9 @@
         </ul>
     </nav>
 
-<!-- Container -->
-    <div class="container">
-
-        <h1>A</h1>
-
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
-
+<!-- Terminal -->
+    <div class="Terminal">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde, voluptates eligendi vero adipisci praesentium facere dolore dolorum nulla nam ducimus officia perferendis officiis! Iusto tempore tempora totam. Quidem, aspernatur.</p>
     </div>
 
     <div style="height: 2000px;"></div>
