--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <div class="selection">
 
             <a href="hra.html">
-                <div class="selectionItem Hra">
+                <div class="selectionItem HraObrazek">
                     <h2>Hra</h2>
                 </div>
             </a>
 
             
             <a href="vyvoj.html">
-                <div class="selectionItem Vyvoj">
+                <div class="selectionItem VyvojObrazek">
                     <h2>Vývoj</h2>
                 </div>
             </a>
             
             <a href="vyvojar.html">
-                <div class="selectionItem Vyvojar">
+                <div class="selectionItem VyvojarObrazek">
                     <h2>Vývojář</h2>
                 </div>
             </a>
