--- a/hra.html
+++ b/hra.html
@@ -31,21 +31,12 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto dolore ducimus pariatur maxime soluta doloremque placeat alias, at quam unde cum quis accusamus aspernatur omnis voluptas autem doloribus, officia asperiores.</p>
     </div>
 
-    <div class="aaaa">
+    <div class="text">
         <h2>SIGURD</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam provident eaque quae sint vitae sunt voluptatum, repudiandae aliquam corporis velit unde quia inventore nisi laudantium qui optio suscipit, deserunt explicabo.</p>
     </div>
     <style>
-        .aaaa{
-            width: 1500px;
-            height: 600px;
-            background-color: gray;
-            opacity: .7;
-            margin: 32px;
-            padding: 16px;
-            font-size: 32px;
-            border-radius: 48px;
-        }
+
     </style>
 
         <div style="height: 2000px;"></div>
