hra.html Terminal a text

--- a/vyvoj.html
+++ b/vyvoj.html
@@ -24,7 +24,7 @@
 
 <!-- Terminal -->
     <div class="Terminal">
-
+        <p class="Credity">°353</p>
         <h1>A</h1>
 
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
