--- a/hra.html
+++ b/hra.html
@@ -9,7 +9,7 @@
 </head>
 <body class="Hra">
 
-        <nav aria-label="primary menu">
+        <nav>
             <ul class="nav">
                     <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
                 <div class="navitems">
@@ -24,20 +24,25 @@
 <!-- Terminal -->
     <div class="Terminal">
 
-        <h1>ABCDEFGHIJKLMNOPQRSTUVWXYZ</h1>
-
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis sint temporibus aperiam soluta non nisi, voluptas, doloribus rerum dolorem ipsa voluptatibus hic dolor quidem est earum reiciendis, accusamus deleniti atque!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto dolore ducimus pariatur maxime soluta doloremque placeat alias, at quam unde cum quis accusamus aspernatur omnis voluptas autem doloribus, officia asperiores.</p>
+        <h3>>HRA LETHAL COMPANY</h3>
+        <p>----------------------------------</p>
+        <p>//: Úvod do hry...</p>
+        <p>//: Princip hry...</p>
+        
     </div>
 
-    <div class="text">
-        <h2>SIGURD</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam provident eaque quae sint vitae sunt voluptatum, repudiandae aliquam corporis velit unde quia inventore nisi laudantium qui optio suscipit, deserunt explicabo.</p>
+    <div id="hra1">
+        <h2>Úvod do hry</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nihil impedit ab ipsum laborum commodi dignissimos omnis, rem ratione sequi temporibus consectetur delectus aut quia. Eaque, laboriosam. Aspernatur, deleniti qui.</p>
     </div>
-    <style>
 
-    </style>
+    <br>
+    <br>
+
+    <div id="hra2">
+        <h2>Princip hry</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nulla exercitationem animi non pariatur nostrum ipsa modi doloribus! Voluptatem, distinctio temporibus ea recusandae inventore labore mollitia. In numquam minima labore!</p>
+    </div>
 
         <div style="height: 2000px;"></div>
 
