--- a/hra.html
+++ b/hra.html
@@ -9,6 +9,7 @@
 </head>
 <body class="Hra">
 
+<!-- Navigace -->
         <nav>
             <ul class="nav">
                     <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
@@ -24,25 +25,39 @@
 <!-- Terminal -->
     <div class="Terminal">
 
-        <h3>>HRA LETHAL COMPANY</h3>
+        <h3>> HRA LETHAL COMPANY</h3>
         <p>----------------------------------</p>
-        <p>//: Úvod do hry...</p>
-        <p>//: Princip hry...</p>
+        <ul class="TerminalNav">
+            <a href="#hra1"><li>//: Úvod do hry...</li></a>
+            <a href="#hra2"><li>//: Princip hry...</li></a>
+            <a href="#hra3"><li>//: Hra xd...</li></a>
+        </ul>
         
     </div>
 
+<!-- text1 -->
     <div id="hra1">
         <h2>Úvod do hry</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nihil impedit ab ipsum laborum commodi dignissimos omnis, rem ratione sequi temporibus consectetur delectus aut quia. Eaque, laboriosam. Aspernatur, deleniti qui.</p>
     </div>
 
     <br>
-    <br>
 
+<!-- text2 -->
     <div id="hra2">
         <h2>Princip hry</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nulla exercitationem animi non pariatur nostrum ipsa modi doloribus! Voluptatem, distinctio temporibus ea recusandae inventore labore mollitia. In numquam minima labore!</p>
     </div>
+
+    <br>
+
+<!-- text3 -->
+    <div id="hra3">
+        <h2>Hra xd</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt laudantium id a expedita possimus magnam pariatur ab saepe. Quis excepturi esse doloribus quo aspernatur.</p>
+    </div>
+
+    <br>
 
         <div style="height: 2000px;"></div>
 
