--- a/hra.html
+++ b/hra.html
@@ -26,7 +26,7 @@
     <div class="Terminal">
 
         <h3>>HRA LETHAL COMPANY</h3>
-        <p>----------------------------------</p>
+        <p>--------------------------</p>
         <ul class="TerminalNav">
             <a href="#text1"><li>//: Úvod do hry...</li></a>
             <a href="#text2"><li>//: Princip hry...</li></a>
@@ -38,22 +38,28 @@
 <!-- text1 -->
     <div id="text1" style="height: 50px;"></div>
     <div id="hra1">
-        <h2>Úvod do hry</h2>
-        <p>Lethal Company je horrorová hra, která vybouchla popularitou v říjnu 2023. Předběžný přístup vyšel 23.10. na platformu Steam, kde se od té doby prodalo už přes 10 miliónů kopií. Hra se může hrát sólo, nebo lépe s kamarády multi-player. Díky nízkým systémovým požadavkům a ceně 9,75 € je hra velmi přístupná pro každého hráče. </p>
+        <div class="obsah">
+            <h2>Úvod do hry</h2>
+            <p>Lethal Company je horrorová hra, která vybouchla popularitou v říjnu 2023. Předběžný přístup vyšel 23.10. na platformu Steam, kde se od té doby prodalo už přes 10 miliónů kopií. Hra se může hrát sólo, nebo lépe s kamarády multi-player. Díky nízkým systémovým požadavkům a ceně 9,75 € je hra velmi přístupná pro každého hráče. </p>            
+        </div>
     </div>
 
 <!-- text2 -->
     <div id="text2" style="height: 70px;"></div>
     <div id="hra2">
-        <h2>Princip hry</h2>
-        <p>Vy a vaši ostatní přátelé pracujete pro organizaci oslovovanou jako "The Company". Váš úkol je sbírat šrot na opuštěných měsících, který později organizaci prodáváte. Za vydělané kredity si můžete koupit pomůcky, aby sbírání šrotu bylo jednoduší. Každé tři dny máte od organizace určenou kvótu, kterou musíte do tří dnů splnit.</p>
+        <div class="obsah">
+            <h2>Princip hry</h2>
+            <p>Vy a vaši ostatní přátelé pracujete pro organizaci oslovovanou jako "The Company". Váš úkol je sbírat šrot na opuštěných měsících, který později organizaci prodáváte. Za vydělané kredity si můžete koupit pomůcky, aby sbírání šrotu bylo jednoduší. Každé tři dny máte od organizace určenou kvótu, kterou musíte do tří dnů splnit.</p>
+        </div>
     </div>
 
 <!-- text3 -->
     <div id="text3" style="height: 50px;"></div>
     <div id="hra3">
-        <h2>Hra xd</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt laudantium id a expedita possimus magnam pariatur ab saepe. Quis excepturi esse doloribus quo aspernatur.</p>
+        <div class="obsah">
+            <h2>Hra xd</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt laudantium id a expedita possimus magnam pariatur ab saepe. Quis excepturi esse doloribus quo aspernatur.</p>
+        </div>
     </div>
 
                  <div style="height: 2000px;"></div>
