--- a/hra.html
+++ b/hra.html
@@ -26,41 +26,54 @@
     <div class="Terminal">
 
         <h3>>HRA LETHAL COMPANY</h3>
-        <p>--------------------------</p>
+        <p class="cara">--------------------------</p>
         <ul class="TerminalNav">
             <a href="#text1"><li>//: Úvod do hry...</li></a>
             <a href="#text2"><li>//: Princip hry...</li></a>
-            <a href="#text3"><li>//: Hra xd...</li></a>
+            <a href="#text3"><li>//: Týmová práce...</li></a>
+            <a href="#text4"><li>//: Risk je zisk...</li></a>
         </ul>
         
     </div>
 
 <!-- text1 -->
-    <div id="text1" style="height: 50px;"></div>
+    <div id="text1" style="height: 150px;"></div>
     <div id="hra1">
         <div class="obsah">
             <h2>Úvod do hry</h2>
-            <p>Lethal Company je horrorová hra, která vybouchla popularitou v říjnu 2023. Předběžný přístup vyšel 23.10. na platformu Steam, kde se od té doby prodalo už přes 10 miliónů kopií. Hra se může hrát sólo, nebo lépe s kamarády multi-player. Díky nízkým systémovým požadavkům a ceně 9,75 € je hra velmi přístupná pro každého hráče. </p>            
+            <p>Lethal Company je hororová hra, která vybouchla popularitou v říjnu 2023. Předběžný přístup vyšel 23.10. na platformu Steam, kde se od té doby prodalo už přes 10 miliónů kopií. Hra se může hrát sólo, nebo lépe s kamarády multi-player. Díky nízkým systémovým požadavkům a ceně 9,75 € je hra velmi přístupná pro každého hráče. </p>            
         </div>
     </div>
 
 <!-- text2 -->
-    <div id="text2" style="height: 70px;"></div>
+    <div id="text2" style="height: 150px;"></div>
     <div id="hra2">
         <div class="obsah">
             <h2>Princip hry</h2>
-            <p>Vy a vaši ostatní přátelé pracujete pro organizaci oslovovanou jako "The Company". Váš úkol je sbírat šrot na opuštěných měsících, který později organizaci prodáváte. Za vydělané kredity si můžete koupit pomůcky, aby sbírání šrotu bylo jednoduší. Každé tři dny máte od organizace určenou kvótu, kterou musíte do tří dnů splnit.</p>
+            <p>Vy a vaši ostatní přátelé pracujete pro organizaci oslovovanou jako "The Company". Váš úkol je sbírat šrot na opuštěných měsících, který později organizaci prodáváte. Za vydělané kredity si můžete koupit pomůcky, aby sbírání šrotu bylo jednodušší. Každé tři dny máte od organizace určenou kvótu, kterou musíte do 3 dnů splnit.</p>
         </div>
     </div>
 
 <!-- text3 -->
-    <div id="text3" style="height: 50px;"></div>
+    <div id="text3" style="height: 150px;"></div>
     <div id="hra3">
         <div class="obsah">
-            <h2>Hra xd</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nesciunt laudantium id a expedita possimus magnam pariatur ab saepe. Quis excepturi esse doloribus quo aspernatur.</p>
+            <h2>Týmová práce</h2>
+            <p>Pracovat jako tým je v této hře důležité. Jeden člen posádky může na měsících zůstat v lodi, kde má přístup k terminálu a monitoru. Díky němu může sledovat spoluhráče a navigovat je v matoucím bludišti budov. Přes terminál lze i vypínat obranný systém nebo bezpečnostní dveře uvnitř interiéru budovy.</p>
+        </div>
+        <img src="assets/content/Lethal-Comapny-Terminal-Monitor.png" alt="Terminal/Monitor">
+    </div>
+
+<!-- text4 -->
+<div id="text4" style="height: 150px;"></div>
+    <div id="hra4">
+        <div class="obsah">
+            <h2>Risk je zisk</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis recusandae quod nobis obcaecati ratione inventore architecto harum est similique libero! Voluptatem enim dignissimos eligendi, tempora rem dolor quidem fugit ad.</p>
         </div>
     </div>
+
+
 
                  <div style="height: 2000px;"></div>
 
