Hotový obsah hra.html
macbook @media

--- a/hra.html
+++ b/hra.html
@@ -69,7 +69,7 @@
     <div id="hra4">
         <div class="obsah">
             <h2>Risk je zisk</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis recusandae quod nobis obcaecati ratione inventore architecto harum est similique libero! Voluptatem enim dignissimos eligendi, tempora rem dolor quidem fugit ad.</p>
+            <p>Podle názvu hry si odvodíte, že sbírání šrotu není procházka růžovým sadem. I když jsou měsíce opuštěné, sami rozhodně nebudete. V interiéru budov můžete potkat několik toulajících se monster. Pokud budete šrot sbírat pomalu, najdete svou smrt i venku v pozdních hodinách. Pro zkušenější posádku si můžete na dobu jedné kvóty zakoupit cestu na obtížnější měsíce, kde je větší počet šrotu, ale také větší šance nebezpečí.</p>
         </div>
     </div>
 
