--- a/vyvoj.html
+++ b/vyvoj.html
@@ -24,13 +24,26 @@
 
 <!-- Terminal -->
     <div class="Terminal">
-        <p class="Credity">°353</p>
-        <h1>A</h1>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
-
+        <h3>>VÝVOJ LETHAL COMPANY</h3>
+        <p class="cara">--------------------------</p>
+        <ul class="TerminalNav">
+            <a href="#text1"><li>//: Výroba...</li></a>
+            <a href="#text2"><li>//: Popularita...</li></a>
+            <a href="#text3"><li>//: Grafika...</li></a>
+            <a href="#text4"><li>//: Zvuk...</li></a>
+        </ul>
+        
     </div>
 
+<!-- text1 -->
+    <div id="text1" style="height: 150px;"></div>
+    <div id="vyvoj1">
+        <div class="obsah">
+            <h2>Výroba</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam voluptatem repudiandae temporibus distinctio libero animi maxime fugit molestiae eaque harum, doloremque ex, commodi rerum mollitia odit dolores quos dolor numquam.</p>            
+        </div>
+    </div>
 
     <div style="height: 2000px;"></div>
 </body>
