--- a/vyvojar.html
+++ b/vyvojar.html
@@ -23,7 +23,16 @@
 
 <!-- Terminal -->
     <div class="Terminal">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde, voluptates eligendi vero adipisci praesentium facere dolore dolorum nulla nam ducimus officia perferendis officiis! Iusto tempore tempora totam. Quidem, aspernatur.</p>
+
+        <h3>>ZEEKERSSS</h3>
+        <p class="cara">--------------------------</p>
+        <ul class="TerminalNav">
+            <a href="#text1"><li>//: Začátek...</li></a>
+            <a href="#text2"><li>//: Lethal Company...</li></a>
+            <a href="#text3"><li>//: Roblox...</li></a>
+            <a href="#text4"><li>//: Další hry...</li></a>
+        </ul>
+        
     </div>
 
     <div style="height: 2000px;"></div>
