Revert "CSS zmena"
This reverts commit 40a44a759c167507c4828d3b3b3109bc85f1a502.

--- a/vyvojar.html
+++ b/vyvojar.html
@@ -23,16 +23,7 @@
 
 <!-- Terminal -->
     <div class="Terminal">
-
-        <h3>>ZEEKERSSS</h3>
-        <p class="cara">--------------------------</p>
-        <ul class="TerminalNav">
-            <a href="#text1"><li>//: Začátek...</li></a>
-            <a href="#text2"><li>//: Lethal Company...</li></a>
-            <a href="#text3"><li>//: Roblox...</li></a>
-            <a href="#text4"><li>//: Další hry...</li></a>
-        </ul>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde, voluptates eligendi vero adipisci praesentium facere dolore dolorum nulla nam ducimus officia perferendis officiis! Iusto tempore tempora totam. Quidem, aspernatur.</p>
     </div>
 
     <div style="height: 2000px;"></div>
