--- a/vyvoj.html
+++ b/vyvoj.html
@@ -9,7 +9,7 @@
 </head>
 <body class="Vyvoj">
 
-<!-- Navigace -->
+<!-- Navigace --> 
     <nav>
         <ul class="nav">
                 <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
@@ -24,11 +24,16 @@
 
 <!-- Terminal -->
     <div class="Terminal">
-        <p class="Credity">°353</p>
-        <h1>A</h1>
 
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque assumenda accusamus, earum soluta delectus rerum, a dolor alias minus possimus praesentium, rem quaerat! Corrupti saepe soluta, esse eos ab numquam.</p>
-
+        <h3>>VÝVOJ LETHAL COMPANY</h3>
+        <p class="cara">--------------------------</p>
+        <ul class="TerminalNav">
+            <a href="#text1"><li>//: Výroba...</li></a>
+            <a href="#text2"><li>//: Popularita...</li></a>
+            <a href="#text3"><li>//: Grafika...</li></a>
+            <a href="#text4"><li>//: Zvuk...</li></a>
+        </ul>
+        
     </div>
 
 
