Obsah vyvoj.html
nový obrázky + twitter

--- a/vyvoj.html
+++ b/vyvoj.html
@@ -28,15 +28,42 @@
         <h3>>VÝVOJ LETHAL COMPANY</h3>
         <p class="cara">--------------------------</p>
         <ul class="TerminalNav">
-            <a href="#text1"><li>//: Výroba...</li></a>
-            <a href="#text2"><li>//: Popularita...</li></a>
-            <a href="#text3"><li>//: Grafika...</li></a>
+            <a href="#text1"><li>//: Popularita...</li></a>
+            <a href="#text2"><li>//: Inspirace...</li></a>
+            <a href="#text3"><li>//: Vzhled a grafika...</li></a>
             <a href="#text4"><li>//: Zvuk...</li></a>
         </ul>
         
     </div>
 
+<!-- text1 -->
+    <div id="text1" style="height: 150px;"></div>
+    <div id="vyvoj1">
+        <div class="obsah">
+            <h2>Popularita</h2>
+            <p>Hra už od vydání získala obří podporu lidí. Otázka, čím se hra proslavila, je jednoduchá na zodpovězení. Hra dokonale vystihla aspekt multiplayeru s chaosem ale i komedií. Lethal Company svou popularitu získal zejména díky jednoduché hratelnosti, která se rychle pochopí, děsivém až paranoidním pocitu při hraní a hlavné díky zábavě, kterou budete mít když uslyšíte kamaráda křičet o život na druhým konci chodby. Po internetu se rychle rozletěla a po pár týdnů o ní slyšel skoro každý. Na konci roku 2023 vyhrála na Steamu cenu: "NEJLEPÍ S PŘÁTELI".</p>
+        </div>
+    </div>
 
-    <div style="height: 2000px;"></div>
+    <img class="SteamAwards" src="assets/content/Lethal-Company-SteamAwards.png" alt="Steam Awards">
+
+<!-- Tweet -->
+    <div class="tweet">
+        <div class="obsah">
+            <blockquote class="twitter-tweet" data-media-max-width="1920" data-lang="cs" data-theme="dark"><p lang="en" dir="ltr">While I was asleep Lethal Company passed 100,000 concurrent players. Unbelievable, thank you for playing. Releasing updates for this game will be very fun. <a href="https://t.co/VYQgfve4hr">pic.twitter.com/VYQgfve4hr</a></p>&mdash; Zeekerss (@ZeekerssRBLX) <a href="https://twitter.com/ZeekerssRBLX/status/1726106297534415030?ref_src=twsrc%5Etfw">19. listopadu 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </div>
+
+<!-- text2 -->
+    <div id="text2" style="height: 150px;"></div>
+    <div id="vyvoj2">
+        <div class="obsah">
+            <h2>Inspirace</h2>
+            <p>Mezi hlavní inspiraci byla také známá hra jménem Phasmophobia, kde hráči spolu objevujou nové věci, zatímco jsou všichni paranoidní a vystrašení. Skvělou vlastností obou her je proximity voicechat neboli bezkontaktní hlasový chat. Vývojář si z této hry vzal velkou inspiraci právě z interakcí mezi hráčema ve hře. Jedna z prvních věcí přidaná do hry byla vysílačka pro komunikaci s ostatními hráči. </p>
+        </div>
+    </div>
+
+        <div style="height: 2000px;"></div>
+    
 </body>
 </html>
