--- a/vyvoj.html
+++ b/vyvoj.html
@@ -41,7 +41,7 @@
     <div id="vyvoj1">
         <div class="obsah">
             <h2>Popularita</h2>
-            <p>Hra už od vydání získala obří podporu lidí. Otázka, čím se hra proslavila, je jednoduchá na zodpovězení. Hra dokonale vystihla aspekt multiplayeru s chaosem ale i komedií. Lethal Company svou popularitu získal zejména díky jednoduché hratelnosti, která se rychle pochopí, děsivém až paranoidním pocitu při hraní a hlavné díky zábavě, kterou budete mít když uslyšíte kamaráda křičet o život na druhým konci chodby. Po internetu se rychle rozletěla a po pár týdnů o ní slyšel skoro každý. Na konci roku 2023 vyhrála na Steamu cenu: "NEJLEPÍ S PŘÁTELI".</p>
+            <p>Hra už od vydání získala obří podporu lidí. Otázka, čím se hra proslavila, je jednoduchá na zodpovězení. Hra dokonale vystihla aspekt multiplayeru s chaosem ale i komedií. Lethal Company svou popularitu získal zejména díky jednoduché hratelnosti, která se rychle pochopí, děsivém až paranoidním pocitu při hraní a hlavné díky zábavě, kterou budete mít když uslyšíte kamaráda křičet o život na druhým konci chodby. Po internetu se rychle rozletěla a po pár týdnů o ní slyšel skoro každý. Na konci roku 2023 vyhrála na Steamu cenu: "NEJLEPŠÍ S PŘÁTELI".</p>
         </div>
     </div>
 
