--- a/vyvoj.html
+++ b/vyvoj.html
@@ -41,7 +41,7 @@
     <div id="vyvoj1">
         <div class="obsah">
             <h2>Popularita</h2>
-            <p>Hra už od vydání získala obří podporu lidí. Otázka, čím se hra proslavila, je jednoduchá na zodpovězení. Hra dokonale vystihla aspekt multiplayeru s chaosem ale i komedií. Lethal Company svou popularitu získal zejména díky jednoduché hratelnosti, která se rychle pochopí, děsivém až paranoidním pocitu při hraní a hlavné díky zábavě, kterou budete mít když uslyšíte kamaráda křičet o život na druhým konci chodby. Po internetu se rychle rozletěla a po pár týdnů o ní slyšel skoro každý. Na konci roku 2023 vyhrála na Steamu cenu: "NEJLEPŠÍ S PŘÁTELI".</p>
+            <p>Hra už od vydání získala obří podporu lidí. Otázka, čím se hra proslavila, je jednoduchá na zodpovězení. Hra dokonale vystihla aspekt multiplayeru s chaosem ale i komedií. Lethal Company svou popularitu získal zejména díky jednoduché hratelnosti, která se rychle pochopí, děsivém až paranoidním pocitu při hraní a hlavné díky zábavě, kterou budete mít když uslyšíte kamaráda křičet o život na druhém konci chodby. Po internetu se rychle rozletěla a po pár týdnech o ní slyšel skoro každý. Na konci roku 2023 vyhrála na Steamu cenu: "NEJLEPŠÍ S PŘÁTELI".</p>
         </div>
     </div>
 
@@ -59,11 +59,22 @@
     <div id="vyvoj2">
         <div class="obsah">
             <h2>Inspirace</h2>
-            <p>Mezi hlavní inspiraci byla také známá hra jménem Phasmophobia, kde hráči spolu objevujou nové věci, zatímco jsou všichni paranoidní a vystrašení. Skvělou vlastností obou her je proximity voicechat neboli bezkontaktní hlasový chat. Vývojář si z této hry vzal velkou inspiraci právě z interakcí mezi hráčema ve hře. Jedna z prvních věcí přidaná do hry byla vysílačka pro komunikaci s ostatními hráči. </p>
+            <p>Hlavní inspirací byla také známá hra jménem Phasmophobia, kde hráči spolu objevují nové věci, zatímco jsou všichni paranoidní a vystrašení. Skvělou vlastností obou her je proximity voicechat neboli bezkontaktní hlasový chat. Vývojář si z této hry vzal velkou inspiraci právě z interakcí mezi hráči ve hře. Jedna z prvních věcí přidaná do hry byla vysílačka pro komunikaci s ostatními hráči. </p>
         </div>
     </div>
 
-        <div style="height: 2000px;"></div>
+<!-- text3 -->
+    <div id="text3" style="height: 150px;"></div>
+    <div id="vyvoj3">
+        <div class="obsah">
+            <h2>Vzhled a grafika</h2>
+            <p>Lethal Company je taky unikátní ve svém vzhledu. Styl hry má být "retro-futuristický" neboli budoucnost, jak si ji představovali lidé v minulosti. Když se na hru podíváte, něco na ní nesedí. Pravdou je, že hra je malý obrázek, který se zvětší a roztáhne na FullHD. Je to důvod, proč hra vypadá tak "nekvalitně" až pixelovaně, ale taky proč nevyžaduje vysoké systémové specifikace. Ať se vám vzhled líbí, nebo ne, hře dává velkou jedinečnost a dostupnost pro průměrného hráče.</p>
+        </div>
+    </div>
+
+
+
+                    <div style="height: 2000px;"></div>
     
 </body>
 </html>
