monitor PNG a vyvoj.html text4 začátek

--- a/hra.html
+++ b/hra.html
@@ -56,13 +56,16 @@
 
 <!-- text3 -->
     <div id="text3" style="height: 150px;"></div>
-    <div id="hra3">
-        <div class="obsah">
-            <h2>Týmová práce</h2>
-            <p>Pracovat jako tým je v této hře důležité. Jeden člen posádky může na měsících zůstat v lodi, kde má přístup k terminálu a monitoru. Díky němu může sledovat spoluhráče a navigovat je v matoucím bludišti budov. Přes terminál lze i vypínat obranný systém nebo bezpečnostní dveře uvnitř interiéru budovy.</p>
+    <div class="flex">
+        <div id="hra3">
+            <div class="obsah">
+                <h2>Týmová práce</h2>
+                <p>Pracovat jako tým je v této hře důležité. Jeden člen posádky může na měsících zůstat v lodi, kde má přístup k terminálu a monitoru. Díky němu může sledovat spoluhráče a navigovat je v matoucím bludišti budov. Přes terminál lze i vypínat obranný systém nebo bezpečnostní dveře uvnitř interiéru budovy.</p>
+            </div>
         </div>
-        <img src="assets/content/Lethal-Comapny-Terminal-Monitor.png" alt="Terminal/Monitor">
+        <img class="hra3img" src="assets/content/Lethal-Comapny-Terminal-Monitor-Cut.png" alt="Terminal/Monitor">
     </div>
+        
 
 <!-- text4 -->
 <div id="text4" style="height: 150px;"></div>
