--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="fotouvod">
 
-    <div class="flex">
+    <div class="flexCol">
 <!-- Nadpis -->
         <h1>Lethal Company</h1>
 
