--- a/vyvoj.html
+++ b/vyvoj.html
@@ -31,7 +31,7 @@
             <a href="#text1"><li>//: Popularita...</li></a>
             <a href="#text2"><li>//: Inspirace...</li></a>
             <a href="#text3"><li>//: Vzhled a grafika...</li></a>
-            <a href="#text4"><li>//: Zvuk...</li></a>
+            <a href="#text4"><li>//: Atmosféra a zvuk...</li></a>
         </ul>
         
     </div>
@@ -69,6 +69,15 @@
         <div class="obsah">
             <h2>Vzhled a grafika</h2>
             <p>Lethal Company je taky unikátní ve svém vzhledu. Styl hry má být "retro-futuristický" neboli budoucnost, jak si ji představovali lidé v minulosti. Když se na hru podíváte, něco na ní nesedí. Pravdou je, že hra je malý obrázek, který se zvětší a roztáhne na FullHD. Je to důvod, proč hra vypadá tak "nekvalitně" až pixelovaně, ale taky proč nevyžaduje vysoké systémové specifikace. Ať se vám vzhled líbí, nebo ne, hře dává velkou jedinečnost a dostupnost pro průměrného hráče.</p>
+        </div>
+    </div>
+
+<!-- text4 -->
+    <div id="text4" style="height: 150px;"></div>
+    <div id="vyvoj4">
+        <div class="obsah">
+            <h2>Atmosféra a zvuk</h2>
+            <p></p>
         </div>
     </div>
 
