Hotový obsah vyvoj.html

--- a/vyvoj.html
+++ b/vyvoj.html
@@ -79,7 +79,7 @@
     <div id="vyvoj4">
         <div class="obsah">
             <h2>Atmosféra a zvuk</h2>
-            <p></p>
+            <p>Zvuky ve hrách nám říkají, jak se máme cítit. V Lethal Company budete většinu času poslouchat vaše spoluhráče nebo si s nimi i povídat. Svojí pravou tvář ale hra ukáže, až když bezpečí smíchu zmizí a vy uslyšíte jen své kroky a tichost interiéru. Po dobu hrání uslyšíte i plno okolních zvuků, které vám naženou husí kůži, ale ve hře se vyskytuje i jemná hudba. Každé ráno, poledne, večer a noc uslyšíte venku tóny piána signalizující čas dne. V interiéru má však absence hudby stejně velký dopad. Když putujete sami, bude vás provádět jen hučení a okolní zvuky, dokud nenarazíte na svou možnou smrt.</p>
         </div>
     </div>
 
