text1 vyvojar.html
obsah a nový obrázek

--- a/vyvojar.html
+++ b/vyvojar.html
@@ -27,13 +27,24 @@
         <h3>>ZEEKERSS</h3>
         <p class="cara">--------------------------</p>
         <ul class="TerminalNav">
-            <a href="#text1"><li>//: Začátek...</li></a>
+            <a href="#text1"><li>//: ZeekerssRBLX...</li></a>
             <a href="#text2"><li>//: Lethal Company...</li></a>
             <a href="#text3"><li>//: Roblox...</li></a>
             <a href="#text4"><li>//: Další hry...</li></a>
         </ul>
         
     </div>
+
+    <!-- text1 -->
+    <div id="text1" style="height: 150px;"></div>
+    <div id="vyvojar1">
+        <div class="obsah">
+            <h2>ZeekerssRBLX</h2>
+            <img src="assets/content/Zeekerss-Twitter.jpg" alt="Zeekerss">
+            <p>Zeekerss je 21 letý vývojář her, který sám vytvořil hru Lethal Company s malou pomocí jeho přátel jako testery. Vášeň pro tvoření her měl už do malička. Ve 14 letech začal vytvářet hry na platformu Roblox, kde vytvořil 9 her. Později se oddělil od Robloxu a pracoval na hrách v Unity, které nahrával na Itch.io, kde vytvořil 7 her. Nejnovější hru, neboli Lethal Company, vydal na platformu Steam, kde hra vybouchla popularitou.</p>
+        </div>
+    </div>
+
 
                     <div style="height: 2000px;"></div>
 </body>
