text2 vyvojar.html
obsah

--- a/vyvojar.html
+++ b/vyvojar.html
@@ -28,23 +28,42 @@
         <p class="cara">--------------------------</p>
         <ul class="TerminalNav">
             <a href="#text1"><li>//: ZeekerssRBLX...</li></a>
-            <a href="#text2"><li>//: Lethal Company...</li></a>
-            <a href="#text3"><li>//: Roblox...</li></a>
-            <a href="#text4"><li>//: Další hry...</li></a>
+            <a href="#text2"><li>//: Roblox...</li></a>
+            <a href="#text3"><li>//: Itch.io...</li></a>
         </ul>
         
     </div>
 
-    <!-- text1 -->
+<!-- text1 -->
     <div id="text1" style="height: 150px;"></div>
     <div id="vyvojar1">
         <div class="obsah">
             <h2>ZeekerssRBLX</h2>
             <img src="assets/content/Zeekerss-Twitter.jpg" alt="Zeekerss">
-            <p>Zeekerss je 21 letý vývojář her, který sám vytvořil hru Lethal Company s malou pomocí jeho přátel jako testery. Vášeň pro tvoření her měl už do malička. Ve 14 letech začal vytvářet hry na platformu Roblox, kde vytvořil 9 her. Později se oddělil od Robloxu a pracoval na hrách v Unity, které nahrával na Itch.io, kde vytvořil 7 her. Nejnovější hru, neboli Lethal Company, vydal na platformu Steam, kde hra vybouchla popularitou.</p>
+            <p>Zeekerss je 21 letý vývojář her, který sám vytvořil hru Lethal Company s malou pomocí jeho přátel jako testery. Vášeň pro tvoření her měl už do malička. Ve 14 letech začal vytvářet hry na platformu <a href="https://www.roblox.com/users/21957385/profile" target="_blank">Roblox</a>, kde vytvořil 9 her. Později se oddělil od Robloxu a pracoval na hrách v Unity, které nahrával na <a href="https://zeekerss.itch.io/" target="_blank">Itch.io</a>, kde vytvořil 7 her.</p>
+            <p>Nejnovější hru, neboli Lethal Company, vydal na platformu <a href="https://store.steampowered.com/app/1966720/Lethal_Company/" target="_blank">Steam</a>, kde hra vybouchla popularitou. Takhle velký zájem o hru neočekával ani sám vývojář. Byl to pro něj spíše zábavný projekt na kterým mohl pracovat ,a i přes milióny co vydělal se Zeekerss stále těší na přidávání nových věcí a vývoji Lethal Company, aby hra byla čím dál tím lepší.</p> 
         </div>
     </div>
 
+    <img class="vyvojar1img" src="assets/content/Lethal-Comapy-Zeekerss-Cut.png" alt="Zeekerss-Lethal-Company">
+
+<!-- text2 -->
+    <div id="text2" style="height: 150px;"></div>
+    <div id="vyvojar2">
+        <div class="obsah">
+            <h2>Roblox</h2>
+            <p>Svoji cestu ve vývoji her začal Zeekerss na platformě Roblox. Jeho nejznámější hra se jmenovala <a href="https://www.roblox.com/games/359468425/Silent-Dark-No-longer-functioning" target="_blank">Silent Dark</a>. S jeho další hrou <a href="https://www.roblox.com/games/230278934/Light-Bulb" target="_blank">Light Bulb</a> byly hry popsány jako pychologické trillery. Od roku 2019 je bohužel kvůli změně způsobu programování na Robloxu hra Silent Dark nefunkčí. Předělávka hry se ale dá na Robloxu najít od jiného vývojáře.</p>
+        </div>
+    </div>
+    
+<!-- text3 -->
+    <div id="text2" style="height: 150px;"></div>
+    <div id="vyvojar3">
+        <div class="obsah">
+            <h2>Itch.io</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam minima nesciunt autem, aperiam ipsam nulla nemo, cupiditate ratione odit nisi in consectetur error doloribus iure necessitatibus animi distinctio! Quidem, cum.</p>
+        </div>
+    </div>
 
                     <div style="height: 2000px;"></div>
 </body>
