text3 vyvojar.html
obsah a obrázky

--- a/vyvojar.html
+++ b/vyvojar.html
@@ -9,6 +9,7 @@
 </head>
 <body class="Vyvojar">
     
+<!-- Navigace --> 
     <nav>
         <ul class="nav">
                 <li class="Logo"><a href="https://home.spsostrov.cz/?grp=b0ece75962f31946385f4082fbe4dfd6">Lukáš Zíka</a></li>
@@ -45,7 +46,7 @@
         </div>
     </div>
 
-    <img class="vyvojar1img" src="assets/content/Lethal-Comapy-Zeekerss-Cut.png" alt="Zeekerss-Lethal-Company">
+    <img class="ZeekerssLCimg" src="assets/content/Lethal-Comapy-Zeekerss-Cut.png" alt="Zeekerss-Lethal-Company">
 
 <!-- text2 -->
     <div id="text2" style="height: 150px;"></div>
@@ -56,14 +57,17 @@
         </div>
     </div>
     
+    <img  class="ZeekerssITCHimg" src="assets/content/Zeekerss-Itch-io.png" alt="ZeekerssItchIo">
+
 <!-- text3 -->
-    <div id="text2" style="height: 150px;"></div>
+    <div id="text3" style="height: 150px;"></div>
     <div id="vyvojar3">
         <div class="obsah">
             <h2>Itch.io</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam minima nesciunt autem, aperiam ipsam nulla nemo, cupiditate ratione odit nisi in consectetur error doloribus iure necessitatibus animi distinctio! Quidem, cum.</p>
+            <p>Vývoj v Robloxu je skvělý začátek, ale Roblox vás někdy limituje. Je to možný důvod, proč začal Zeekerss programovat nové hry na Itch.io. Jeho první hra byla <a href="https://zeekerss.itch.io/too-many-asteroids" target="_blank">Too Many Asteroids</a>, která byla spíš test, jestli dokáže udelat hru mimo Roblox. Jeho ostatní hry měli opět horrorový aspekt, ale hra, která se nejvíce podobá Lethal Company, se jmenuje <a href="https://zeekerss.itch.io/it-steals" target="_blank">It Steals</a>. Před Lethal Company to byla Zeekerssova nejpopulárnější hra, kterou hrálo i pár streamerů. Ve hře sbíráte předměty v bludišti zatím co vás nahání monstra. Zajímavé na hře bylo, jak monstra odrážíte. Stejným způsobem se později rozšiřovala hra Letham Company</p>
         </div>
     </div>
+
 
                     <div style="height: 2000px;"></div>
 </body>
